# AGRN

./: AGRN.py  LICENSE  README.md  input.txt  pyproject.toml
Dataset/DREAM4/training data/: SYNAPSE_METADATA_MANIFEST.tsv
Dataset/DREAM5/test data/: SYNAPSE_METADATA_MANIFEST.tsv
Dataset/DREAM5/training data/: SYNAPSE_METADATA_MANIFEST.tsv
Dataset/DREAM5/training data/Network 1 - in silico/: SYNAPSE_METADATA_MANIFEST.tsv
Dataset/DREAM5/training data/Network 2 - S. aureus/: SYNAPSE_METADATA_MANIFEST.tsv
Dataset/DREAM5/training data/Network 3 - E. coli/: SYNAPSE_METADATA_MANIFEST.tsv
Dataset/DREAM5/training data/Network 4 - S. cerevisiae/: SYNAPSE_METADATA_MANIFEST.tsv
tests/: test_agrn_tool.py
