[tool.poetry]
name = "AGRN_tool"
version = "0.1.0"
description = ""
authors = ["Duaa Mohammad Alawad <dmalawad@uno.edu>, Md Wasi Ul Kabir <mkabir3@uno.edu>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
pandas = "^1.3.5"
numpy = "^1.21.5"
scipy = "^1.7.3"
matplotlib = "^3.5.1"
scikit-learn = "^1.0.2"
jupyter = "^1.0.0"
ipykernel = "^6.6.0"
tqdm = "^4.62.3"
shap = "^0.40.0"
optuna = "^2.10.0"
mlflow = "^1.22.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
